--- a/index.html
+++ b/index.html
@@ -2,27 +2,31 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Documentation Page</title>
         <link rel="stylesheet" href="./css/styles.css">
     </head>
-    <body>
+    <body class="js-documentation">
         <nav id="navbar">
             <header>JS Documentation</header>
-            <a href="#Introduction" class="nav-link">Introduction</a>
-            <a href="#What_you_should_already_know" class="nav-link">What you should already know</a>
-            <a href="#JavaScript_and_Java" class="nav-link">JavaScript and Java</a>
-            <a href="#Hello_World" class="nav-link">Hello World</a>
-            <a href="#Variables" class="nav-link">Variables</a>
-            <a href="#Declaring_variables" class="nav-link">Declaring variables</a>
-            <a href="#Variable_scope" class="nav-link">Variable scope</a>
-            <a href="#Global_variables" class="nav-link">Global variables</a>
-            <a href="#Constants" class="nav-link">Constants</a>
-            <a href="#Data_types" class="nav-link">Data types</a>
-            <a href="#if...else_statement" class="nav-link">if...else statement</a>
-            <a href="#while_statement" class="nav-link">while statement</a>
-            <a href="#Function_declarations" class="nav-link">Function declarations</a>
-            <a href="#Reference" class="nav-link">Reference</a>
+
+            <div class="navbar">
+                <a href="#Introduction" class="nav-link">Introduction</a>
+                <a href="#What_you_should_already_know" class="nav-link">What you should already know</a>
+                <a href="#JavaScript_and_Java" class="nav-link">JavaScript and Java</a>
+                <a href="#Hello_World" class="nav-link">Hello World</a>
+                <a href="#Variables" class="nav-link">Variables</a>
+                <a href="#Declaring_variables" class="nav-link">Declaring variables</a>
+                <a href="#Variable_scope" class="nav-link">Variable scope</a>
+                <a href="#Global_variables" class="nav-link">Global variables</a>
+                <a href="#Constants" class="nav-link">Constants</a>
+                <a href="#Data_types" class="nav-link">Data types</a>
+                <a href="#if...else_statement" class="nav-link">if...else statement</a>
+                <a href="#while_statement" class="nav-link">while statement</a>
+                <a href="#Function_declarations" class="nav-link">Function declarations</a>
+                <a href="#Reference" class="nav-link">Reference</a>
+            </div>
         </nav>    
         
         <main id="main-doc">
@@ -211,8 +215,8 @@
             </section>
             <section class="main-section" id="Reference">
                 <header>Reference</header>
-                <ul>
-                    <li>All the documentation in this page is taken from <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Introduction#what_is_javascript">MDN</a></li>
+                <ul class="footer-link">
+                    <li>All the documentation in this page is taken from <a class="footer-link" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Introduction#what_is_javascript">MDN</a></li>
                 </ul>
             </section>
         </main>
